# swarm_aggregation

./: .gitignore  README.md  _BACKUP_13915.gitignore  _BASE_13915.gitignore  requirements.txt
argos_sim/: make_and_run.sh  test.py
argos_sim/ARGoS_simulation/behaviours/: CMakeLists.txt  agent.h  social_behavior.c
config/: config.txt  config_batch.txt  config_batch_heterogeneous.txt  config_linear_noReset.txt  config_linear_reset.txt  config_linear_reset_randomEXT.txt  config_mod.txt  config_quadratic_noReset.txt  config_quadratic_reset.txt  config_quadratic_reset_randomEXT.txt  final_config_linear.txt  fixed_lambda_linear.txt  fixed_lambda_quadratic.txt  irace_config1155_1_1.txt  irace_config6515485.txt  irace_config6515485_1_1.txt
plots/: boxPlots.py  configs_first_behavior.csv  configs_first_behavior_10e5_budget.csv  configs_second_behavior.csv  configs_second_behavior_10e5_budget.csv  metrics.py  scalability_analysis.csv  scalability_analysis.py
results/: log1.csv  log10.csv  log2.csv  log3.csv  log4.csv  log5.csv  log6.csv  log7.csv  log8.csv  log9.csv
src/: heterogeneous_swarm.py  heterogeneous_swarm_irace.py  run_batch.sh  runpy.sh  rw_gradient_follower.py  rw_gradient_follower_irace.py  social_aggregation.py  social_aggregation_irace.py  social_aggregation_irace1.py  social_aggregation_irace2.py
tuning/: configurations.txt  forbidden.txt  irace.Rdata  parameters.txt  scenario.txt  target-runner
tuning1/: .Rhistory  forbidden.txt  instances-list.txt  irace-3731908.stdout  irace-3747353.stdout  irace-3774327.stdout  irace-3805391.stdout  irace.Rdata  (+16 more)
(+91 files in other folders)
